--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- Observability -->
+		<dependency>
+			<groupId>com.wavefront</groupId>
+			<artifactId>wavefront-spring-boot-starter</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
